# cschc

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md  dev_environment.yml
.github/workflows/: cmake.yml
darwin/: darwin.lsan  homebrew-llvm.cmake
dev/: conda.yml
include/: cschc.h
include/core/: actions.h  compression.h  context.h  decompression.h  matching_operators.h  rule_descriptor.h  rule_field_descriptor.h  schc8724.h
include/parser/: parser.h  yang_handler.h
include/parser/protocol/: ipv6.h  udp.h
include/protocol/: coap.h  ipv6.h  udp.h
include/protocols/: coap.h  headers.h  ipv6.h  udp.h
include/utils/: binarie.h  binary.h  log.h  memory.h
projects/nRF5340-DK/: Executable_1.emProject  cschc.emProject  main.c
source/: buffer.c  field_descriptor.c  header_descriptor.c  main.c
source/core/: actions.c  compression.c  context.c  decompression.c  matching_operators.c  rule_descriptor.c  rule_field_descriptor.c
source/parser/: parser.c  yang_handler.c
source/parser/protocol/: ipv6.c  udp.c
source/protocol/: coap.c  ipv6.c  udp.c
source/protocols/: headers.c
source/utils/: binarie.c  binary.c  log.c  memory.c
test/: test_actions.c  test_binary.c  test_buffer.c  test_coap_parser.c  test_compression.c  test_decompression.c  test_field_descriptor.c  test_header_descriptor.c  test_headers.c  test_ipv6_parser.c  test_matching_operators.c  test_memory.c  test_parser.c  test_rule_descriptor.c  test_rule_field_descriptor.c  test_udp_parser.c  test_utils.c  test_yang_handler.c
